# ave.rs

./: .gitignore  Cargo.toml  api.http  flake.nix  readme.md  rustfmt.toml
.github/workflows/: backup.yml  check.yml  deploy.yml
avers-otp/: Cargo.toml
avers-otp/src/: lib.rs  operation.rs  patching.rs  rebase.rs  types.rs
crates/otp/: Cargo.toml
crates/otp/src/: lib.rs  operation.rs  patching.rs  path.rs  rebase.rs  types.rs
scripts/: deploy.sh
src/: main.rs  otp.rs  types.rs
src/otp/: patching.rs  types.rs
