[package]
name = "otp"
version = "0.1.0"
edition = "2024"

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
quickcheck = "1"
quickcheck_macros = "1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.117"
